--- a/Simulateur_de_combat/styles.css
+++ b/Simulateur_de_combat/styles.css
@@ -19,4 +19,6 @@ body {
 .opponents_columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-items: center;
 }
