--- a/Simulateur_de_combat/styles.css
+++ b/Simulateur_de_combat/styles.css
@@ -24,6 +24,37 @@ body {
     justify-items: center;
 }
 
+.critical_strike {
+    background-color: maroon;
+    color: white;
+    padding: 10px;
+    width: 25vw;
+    display: flex;
+    font-weight: 900;
+    margin: auto;
+}
+
+.round_counter {
+    font-weight: 900;
+    background-color: #324065;
+    color: white;
+}
+
+.opponent_killed {
+    margin: auto;
+    background-color: black;
+    width: 25vw;
+    padding: 10px;
+    color: white;
+}
+
+.victory {
+    margin: auto;
+    color: white;
+    background-color: goldenrod;
+    width: 25vw;
+    padding: 10px;
+}
 /*Ajout des polices thématiques*/
 @font-face {
     font-family: 'Skyrim Medium';
