--- a/Simulateur_de_combat/styles.css
+++ b/Simulateur_de_combat/styles.css
@@ -2,12 +2,15 @@ body {
     text-align: center;
     background-image: url(./images/jose-daniel-cabrera-pena-skyrim-the-elder-scrolls-multiplatf.jpg);
     background-position: center;
-    object-fit: cover;
+    background-size: cover;
     display: flex;
     justify-content: center;
     font-family: 'Skyrim Medium';
 }
 
+.main_title_text {
+    font-size: 5vw;
+}
 .main_container {
     display: block;
     width: 50vw;
@@ -15,12 +18,13 @@ body {
     border-radius: 10px;
     background-color: hsl(224, 20%, 70%,0.5);
     backdrop-filter: blur(3px);
+    padding: 20px;
 }
 
 .opponents_columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 10px;
     justify-items: center;
 }
 
@@ -32,6 +36,13 @@ body {
     display: flex;
     font-weight: 900;
     margin: auto;
+    justify-content: center;
+}
+
+.stats {
+    margin:auto;
+    justify-items: center;
+    text-align: center;
 }
 
 .round_counter {
@@ -55,6 +66,26 @@ body {
     width: 25vw;
     padding: 10px;
 }
+
+select option:hover{
+    background-color: #324065;
+}
+
+.fight_button {
+    width: 10vw;
+    font-family: 'Skyrim Medium';
+    font-weight: 600;
+    background-color: #324065;
+    border: white 2px solid;
+    padding: 10px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.fight_button:hover{
+    background-color: #324095;
+    cursor: url(images/Steel_Sword_mini.png), auto;
+}
 /*Ajout des polices thématiques*/
 @font-face {
     font-family: 'Skyrim Medium';
@@ -64,7 +95,7 @@ body {
 }
 
 @font-face {
-    font-family: 'Skryim Normal';
+    font-family: 'Skyrim Normal';
     src: url('./fonts/typo3Normal.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
