--- a/Simulateur_de_combat/styles.css
+++ b/Simulateur_de_combat/styles.css
@@ -16,6 +16,7 @@ body {
     background-image: url(./images/bois_chaud.jpg);
     background-size: cover;
     border: solid 1px;
+    margin: 3px 3px 0 3px;
 }
 .main_title_text {
     font-size: 5vw;
@@ -45,6 +46,7 @@ body {
     background-image: url(./images/metal2.jpg);
     background-size: cover;
     background-position: 5%;
+    margin : 0 3px;
 }
 
 .critical_strike {
@@ -54,6 +56,7 @@ body {
     display: flex;
     font-weight: 900;
     justify-content: center;
+    margin : 0 2px;
 }
 
 .stats {
@@ -68,18 +71,21 @@ body {
     background-size: cover;
     background-position: 5%;
     color: black;
+    margin : 0 3px;
 }
 
 .opponent_killed {
     background-color: black;
     padding: 10px;
     color: white;
+    margin : 0 2px;
 }
 
 .victory {
     color: white;
     background-color: goldenrod;
     padding: 10px;
+    margin : 0 2px;
 }
 
 select option:hover {
@@ -114,12 +120,14 @@ select option:hover {
     background-image: url(./images/bois_chaud.jpg);
     background-size: cover;
     background-position: 5%;
+    margin : 0 3px;
     
 }
 .event_in_fight {
     background-image: url(./images/bois_chaud.jpg);
     background-size: cover;
     padding: 10px 0;
+    margin : 0 3px;
 }
 
 /*Ajout des polices thématiques*/
@@ -139,10 +147,9 @@ select option:hover {
 
 @media (max-width: 600px) {
 
-    /* body {
-        background-position: top;
-
-    } */
+    .main_container{
+        width: 75vw;
+    }
 
     .opponents_columns {
         display: block;
