--- a/Fridgify/src/components/header.css
+++ b/Fridgify/src/components/header.css
@@ -6,6 +6,8 @@
   position: relative;
   border-bottom: solid white 5px;
   box-shadow: 1px 1px 5px black;
+  margin: auto;
+  max-width: 100vw;
 }
 
 .header h1 {
@@ -19,7 +21,7 @@
   font-size: 2rem;
   cursor: pointer;
   position: absolute;
-  right: 20px;
+  right: 10px;
   top: 30px;
 }
 
